k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ops-pilot
  namespace: ops-pilot
  labels:
    app: ops-pilot
    component: backend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: ops-pilot
      component: backend

  template:
    metadata:
      labels:
        app: ops-pilot
        component: backend

    spec:
      containers:
        - name: ops-pilot

          image: sarthakrajput17/ops-pilot:1bfda6889a72b9132ef677f0759e9cfc3e059641
          imagePullPolicy: Always

          # CPU requests are required for HPA to calculate CPU utilization.
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

          ports:
            - containerPort: 5001

          livenessProbe:
            httpGet:
              path: /health
              port: 5001

            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          # Sends traffic to the Pod only after the application is ready.
          readinessProbe:
            httpGet:
              path: /health
              port: 5001

            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
