k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ops-pilot-service
  namespace: ops-pilot

  labels:
    app: ops-pilot
    component: backend

spec:
  selector:
    app: ops-pilot
    component: backend

  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001

  type: NodePort
